--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,15 +1,12 @@
 <div class="toolbar">
     <div class="icon">
-        <svg  viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" (click)="this.toggleBold()">
-            <path d="M8 6.5V18H13C14.6569 18 16 16.6569 16 15V15C16 13.3431 14.6569 12 13 12H8H12.25C13.7688 12 15 10.7688 15 9.25V9.25C15 7.73122 13.7688 6.5 12.25 6.5H8Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" (click)="this.toggleBold()" [ngClass]="{'modifier-active': this.isModActive(this.mods.Bold)}">
+            <path d="M6 4h8a4 4 0 0 1 4 4 4 4 0 0 1-4 4H6z"></path>
+            <path d="M6 12h9a4 4 0 0 1 4 4 4 4 0 0 1-4 4H6z"></path>
         </svg>
-        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M14 6L10 18M6 18H14M10 6H18" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" (click)="this.toggleItalic()" [ngClass]="{'modifier-active': this.isModActive(this.mods.Italic)}">
+            <path d="M19 4h-9M14 20H5M14.7 4.7L9.2 19.4"/>
         </svg>
-        <svg  class="underline" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M7 4V11C7 13.7614 9.23858 16 12 16C14.7614 16 17 13.7614 17 11V4M6 20H18" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-        </svg>
-            
-            
-    </div>
 </div>
+
+<!-- https://iconsvg.xyz/ @ size: 16-->
